k8s/base/ai/cheshirecat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cheshire-cat-core
  labels:
    app: cheshire-cat
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: cheshire-cat
