k8s/base/ai/cheshirecat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cheshire-cat-ingress
  namespace: ai
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-office"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "cheshire-cat-core"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cat.nicolatomassoni.it
      secretName: cheshire-cat-tls
  rules:
  - host: "cat.nicolatomassoni.it"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: cheshire-cat-core
            port:
              number: 80
